@@ -6,7 +6,4 @@ public class PhetCommonConstants {
     public static final String PHET_NAME = "PhET";  // user-visible name, does not require translation
     public static final String PHET_HOME_URL = "http://phet.colorado.edu";
     public static final String PHET_EMAIL = "phethelp@colorado.edu";
-    
-    public static final String PERSISTENCE_DIRNAME = ".phet";
-
 }
