@@ -1,3 +1,5 @@
+12-10-08: #1026, create $HOME/phet if needed when incrementing session count
+12-10-08: #1027, create abstractions for $HOME/.phet and files in that dir
 12-03-08: #920, add "mac-osx-quit" tracking message
 12-03-08: #920, implement quit handler for Mac OS X
 12-03-08: #920, add Apple contrib code (OSXAdapter)
